--- a/pg1.html
+++ b/pg1.html
@@ -15,7 +15,12 @@
         </div>
         
         <div class="mid">
-            nav bar
+            <ul class="navbar">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Prices</a></li>
+            </ul>
         </div>
 
         <div class="right">
