--- a/pg1.html
+++ b/pg1.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="left">
-            logos
+            <img src="Fitness.png" width="300px" height="300px">
         </div>
         
         <div class="mid">
@@ -24,7 +24,8 @@
         </div>
 
         <div class="right">
-            buttons
+            <button class="btn">Call</button>
+            <button class="btn">Email</button>
         </div>
     </header>
 </body>
