--- a/pg1.html
+++ b/pg1.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="form-group">
-                <input type="text" name="" placeholder="Enter your contact number">
+                <input type="text" name="" placeholder="contact number">
             </div>
 
             <div class="form-group">
